fix: align items using flexbox on flex exercise 4

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,9 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
 }
 
 img {
@@ -10,6 +14,15 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  gap: 52px;
+  width: 200px;
+  text-wrap: wrap;
 }
 
 /* do not edit this footer */
